--- a/.env.local
+++ b/.env.local
@@ -2,4 +2,4 @@ AUTH_SECRET="OWmj2UCCM1Zt8eGhOxi4pYKsjfIs/GBtYYTeThwZjv8=" # Added by `npx auth`
 GOOGLE_CLIENT_ID=43687428378-0sajbt689quo2j4gitt742jprgivcdnb.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=OWmj2UCCM1Zt8eGhOxi4pYKsjfIs/GBtYYTeThwZjv8=  # You can generate this with `openssl rand -base64 32`
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://kemistry-demystified-7drdbzbu5-asmits-projects-7cf80379.vercel.app/
